skeleton structure now includes seed_database and individual tour page

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,6 +4,12 @@
 {% block body %}
 
 <h1>Welcome!</h1>
+<p> Top 3 Cards of various tours to switch through</p>
+
+<p>History Learn more about team</p>
+
+<p>Please feel free to submit a commment</p>
+
 
 
 
