--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
       <!-- Custom CSS -->
 
@@ -22,10 +23,16 @@
       
       <ul class="navigation">
         <li><a href="/">Home</a></li>
-       <li><a href="/account">Account</a></li>
-       <li><a href="/tours">Tours</a></li>
-       <li><a href="/history">History</a></li>
-      <li><a href="/contact">Contact</a></li>
+        <li><a href="/tours">Tours</a></li>
+        <li><a href="/history">History</a></li>
+          {% if logIn %}
+        <li><a href="/account">Account</a></li>
+        <li><a href="/logout">Log Out</a></li>
+          {% else %}
+        <li><a href="/login">Login</a></li>
+        <li><a href="/createaccount">Sign Up</a></li>
+        {% endif %}
+      <!-- <li><a href="/contact">Contact</a></li> -->
       </ul>
     </nav>
 
