--- a/templates/contact.html
+++ b/templates/contact.html
@@ -18,7 +18,7 @@
         
         
         <p>
-          <input type="submit" value="Log In">
+          <input type="submit">
         </p>
         </form>
     </fieldset>
