--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -10,7 +10,11 @@
 
 <p>Please feel free to submit a commment</p>
 
+<!-- cover art -->
 
+<!-- tours in cards -->
+
+<!-- learn more about us and our history -->
 
 
 {% endblock %}
