--- a/templates/base.html
+++ b/templates/base.html
@@ -10,18 +10,59 @@
 
       <!-- Custom CSS -->
 
+
+       <!-- Bootstrap JavaScript Bundle with Popper (a Bootstrap dependency for popovers) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
        <!-- Potental Javascript with default script -->
 
             <title>
       {% block title %}{% endblock %}
     </title>
-
-    {% block head %}{% endblock %}
+    
+    {% block head %} {% endblock %}
   </head>
   <body>
+    Login Status: {{ logIn }}
     <nav>
-      
-      <ul class="navigation">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">O</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/tours">Tours</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/history">History</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/account">Account</a>
+            </li>
+            <!-- <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="/" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Account
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                {% if logIn %}
+                <a class="dropdown-item" href="/account">Profile</a>
+                <a class="dropdown-item" href="/logout">Log Out</a>
+                {% else %}
+                <a class="dropdown-item" href="/login">Login</a>
+                <a class="dropdown-item" href="/account">Sign Up</a>
+                {% endif %} -->
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+
+      <!-- <ul class="navigation">
         <li><a href="/">Home</a></li>
         <li><a href="/tours">Tours</a></li>
         <li><a href="/history">History</a></li>
@@ -31,8 +72,8 @@
           {% else %}
         <li><a href="/login">Login</a></li>
         <li><a href="/createaccount">Sign Up</a></li>
-        {% endif %}
-      <!-- <li><a href="/contact">Contact</a></li> -->
+        {% endif %} -->
+     
       </ul>
     </nav>
 
