--- a/templates/tours.html
+++ b/templates/tours.html
@@ -6,6 +6,48 @@
 <h1>Tour</h1>
 <p> Cards of various tours to switch through</p>
 
+ <!-- Images of Tour Package -->
+ <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <!-- {% for image of images %} -->
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <!-- {% endfor %} -->
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="..." alt="First slide">
+        <div class="carousel-caption d-none d-md-block">
+            <!-- insert link based on database available -->
+            <!-- <h5 href="/tours/{{ tour.tour_id }}">{{ image.name }}</h5>
+            <p>{{ image.description }}</p> -->
+      </div>
+
+      <!-- <div class="carousel-item">
+        <img class="d-block w-100" src="..." alt="Second slide">
+        <div class="carousel-caption d-none d-md-block">
+            <h5>{{ image.name }}</h5>
+            <p>{{ image.description }}</p>
+
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="..." alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+            <h5 href="tour_id">{{ image.name }}</h5>
+            <p>{{ image.description }}</p>
+      </div> -->
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
 
 
 {% endblock %}
