updated account page

--- a/templates/account.html
+++ b/templates/account.html
@@ -59,7 +59,7 @@
     </form>
 </fieldset>
   
-<!--Log In to Account-->
+<!--Log out of Account-->
 <fieldset>
     <h2>Log out of Account</h2>
       <form action="/logout" method="POST">
