update at end of day

--- a/templates/account.html
+++ b/templates/account.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-<h1>Account</h1>
+<h1 id="Account">Account</h1>
 
 <!--Log In to Account-->
 <fieldset>
@@ -18,7 +18,7 @@
     </div>
     <p>
         <!--Form:submit button-->
-      <input type="submit" value="Log In" class="btn btn-primary">
+      <input type="submit" value="Log In" class="btn btn-primary" id="login-button">
     </p>
     </form>
 </fieldset>
@@ -54,7 +54,7 @@
     </div>
      <!--Form:submit button-->
      <p>
-     <input type="submit" value="Sign Up" class="btn btn-success">
+     <input type="submit" value="Sign Up" class="btn btn-success" id="sign-up">
     </p>
     </form>
 </fieldset>
