--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,6 +4,7 @@
 {% block body %}
 
 <h1>Welcome!</h1>
+<h2>Cover Image: Water</h2>
 <p> Top 3 Cards of various tours to switch through</p>
 
 <p>History Learn more about team</p>
