--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
-   <!-- base.html NEED TO BE UPDATED -->
+   <!-- base.html NEED TO BE UPDATED NAV DROPDOWN & Javascript default-->
+
 <!DOCUTYPE html>
     <html lang="en">
         <head>
@@ -14,6 +15,8 @@
        <!-- Bootstrap JavaScript Bundle with Popper (a Bootstrap dependency for popovers) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
        <!-- Potental Javascript with default script -->
+
+    <script src="/static/scripts/index.js" default></script>
 
             <title>
       {% block title %}{% endblock %}
