tour subpage updated link to work with database

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,7 @@
     {% block body %}{% endblock %}
 
     {% block after_body %}{% endblock %}
+    <script src="/static/scripts/index.js" default></script>
   </body>
 <footer>
   <!-- Potental footer on every page -->
