--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,17 +5,17 @@
 
 <h1>Welcome!</h1>
 <h2>Cover Image: Water</h2>
-<p> Top 3 Cards of various tours to switch through</p>
 
-<p>History Learn more about team</p>
-
-<p>Please feel free to submit a commment</p>
 
 <!-- cover art -->
 
 <!-- tours in cards -->
+<p> Top 3 Cards of various tours to Scroll through/Flipcards?</p>
 
 <!-- learn more about us and our history -->
 
+<p>History Learn more about team</p>
+
+<p>Please feel free to submit a comment</p>
 
 {% endblock %}
