--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
       <!-- Custom CSS -->
-
+      <link rel="stylesheet" href="/static/style/stylesheet.css"/>
 
        <!-- Bootstrap JavaScript Bundle with Popper (a Bootstrap dependency for popovers) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
        <!-- Potental Javascript with default script -->
 
-    <script src="/static/scripts/index.js" default></script>
+  
 
             <title>
       {% block title %}{% endblock %}
@@ -26,7 +26,7 @@
   </head>
   <body>
     Login Status: {{ logIn }}
-    <nav>
+    
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">O</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,7 +70,11 @@
     {% block body %}{% endblock %}
 
     {% block after_body %}{% endblock %}
-    <script src="/static/scripts/index.js" default></script>
+    <!-- <script src="/static/scripts/index.js" default></script> -->
+    <script src="/static/scripts/mapsDemo.js"></script>
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIU5CFOSTh6g_Mue4VOphmlQQ-fzlgOxs&callback=initMap">
+</script>
   </body>
 <footer>
   <!-- Potental footer on every page -->
