--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,8 @@
        <!-- Bootstrap JavaScript Bundle with Popper (a Bootstrap dependency for popovers) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous" defer></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous" defer></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous" defer></script>   
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous" defer></script>   
     <!-- Potental Javascript with default script -->
 
   
@@ -56,7 +56,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 {% if logIn %}
-                <a class="dropdown-item" href="/account">Profile</a>
+                <!-- <a class="dropdown-item" href="/account">Profile</a> -->
                 <a class="dropdown-item" href="/logout">Log Out</a>
                 {% else %}
                  <!-- TODO: separate login and sign-up page -->
@@ -76,12 +76,13 @@
 
     {% block after_body %}{% endblock %}
     <!-- <script src="/static/scripts/index.js" default></script> -->
-    <script src="/static/scripts/mapsDemo.js"></script>
+    <script src="/static/scripts/map.js"></script>
     <script async
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIU5CFOSTh6g_Mue4VOphmlQQ-fzlgOxs&callback=initMap">
 </script>
-  </body>
+ </body>
 <footer>
   <!-- Potental footer on every page -->
+  <p>Footer Paragraph HERE</p>
 </footer>
 </html>
