trip database functional with tour_details page

--- a/templates/base.html
+++ b/templates/base.html
@@ -56,12 +56,12 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 {% if logIn %}
-                <!-- <a class="dropdown-item" href="/account">Profile</a> -->
+                <a class="dropdown-item" href="/account">Profile</a>
                 <a class="dropdown-item" href="/logout">Log Out</a>
                 {% else %}
                  <!-- TODO: separate login and sign-up page -->
-                <a class="dropdown-item" href="/account">Login</a>
-                <a class="dropdown-item" href="/account">Sign Up</a>
+                <a class="dropdown-item" href="/login_page">Login</a>
+                <a class="dropdown-item" href="/sign_up">Sign Up</a>
                 {% endif %}
               </div>
             </li>
