--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -3,25 +3,7 @@
 
 {% block body %}
 
-<h1 id="Account">Account/Profile Page</h1>
-
-<!--Log In to Account-->
-<fieldset>
-<h2>Log Into Account</h2>
-  <form action="/login" method="POST">
-    
-    <div>
-        <input type="text" name="email" placeholder="email" required>
-    </div>
-    <div>
-        <input type="password" name="password" placeholder="password" required>
-    </div>
-    <p>
-        <!--Form:submit button-->
-      <input type="submit" value="Log In" class="btn btn-primary" id="login-button">
-    </p>
-    </form>
-</fieldset>
+<h1 id="Account">Account</h1>
 
 <!--Create New Account-->
 <fieldset>
@@ -54,7 +36,7 @@
     </div>
      <!--Form:submit button-->
      <p>
-     <input type="submit" value="Sign Up" class="btn btn-success" id="sign-up">
+     <input type="submit" value="Sign Up" class="btn btn-primary" id="sign-up">
     </p>
     </form>
 </fieldset>
