--- a/templates/tour_details.html
+++ b/templates/tour_details.html
@@ -3,15 +3,14 @@
 
 {% block body %}
 
-
-
-
 <div class="container">
     <div class="page-header">
       <h1>{{ tour.tour_name }} Tour</h1>
-      <p class='{{ tour.tour_id}}'>{{ tour.details }}.</p>
+      <p id='{{ tour.tour_id}}'>{{ tour.details }}.</p>
     </div>
     <h2>Start Date: {{ tour.date }}</h2>
+    <input type="submit" value="Book Trip" class="btn btn-primary booked" id="booked">
+    <input type="submit" value="Save Trip" class="btn btn-light saved" id="saved">
 
    
 <!-- Description and google API -->
@@ -23,21 +22,29 @@
         <li>Please explore the Port Trip locals</li>
         <li>Let us know which you like most!</li>
       </ul>
+     
     </div>
 
     <div class="col-12 col-md-6 col-lg-9">
       <div class='{{tour.port_id}}'>
       <section class="map">
         <h5>{{tour.port_name}}</h5>
-        <div id="map" value='{{ tour.tour_id}}' ></div>
+        <div id="map" class="{{tour.state_name}}"></div>
     </section>
     </div>
   </div>
-  </div>
+ </div>
 
-  <p>Google Maps API Port Cities API HERE</p>
-    <input type="submit" value="Book Trip">
     
+<!-- Additional Row for Descriptions -->
+
+  <div class="row">
+    <h2>Two always-equally wide columns</h2>
+    <div class="col-12">
+      <div>Left</div>
+    </div>
+
+
 
 </div>
 
