--- a/templates/history.html
+++ b/templates/history.html
@@ -6,6 +6,6 @@
 <h1>History!</h1>
 
 <!-- Loop through ipsum and put a couple genetic photos in here.  -->
-
+<p>Link to ports and how they were discovered or other filler</p>
 
 {% endblock %}
