--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,9 @@
           </ul>
         </div>
       </nav>
-
+      {% for msg in get_flashed_messages() %}
+    <p class="flash-msg">{{ msg }}</p>
+      {% endfor %}
 
    
     
