functional profile page with balance TODO update save to book

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-<h1>History!</h1>
+<h1>About!</h1>
 
 <!-- Loop through ipsum and put a couple genetic photos in here.  -->
 <p>Link to ports and how they were discovered or other filler</p>
