--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -26,7 +26,7 @@
     <div>
         <label for="phone" class="label">Phone</label>
         <div>       
-        <input type="tel" id="phone" name="phone" placeholder="555-555-5555" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+        <input type="tel" id="phone" name="phone" placeholder="555-555-5555" pattern="1? ?[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
         </div>
     </div>
     <!--Create New Account Birthday-->
