--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,8 @@
     {% block head %} {% endblock %}
   </head>
   <body>
-    Login Status: {{ logIn }}
+    <!-- Login Test Feature -->
+    <!-- Login Status: {{ logIn }} -->
     
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">O</a>
