--- a/templates/about.html
+++ b/templates/about.html
@@ -22,7 +22,7 @@
             </span>
         </div>
         <div>
-          <input type="text" name="email" placeholder="email" required>    
+          <input type="text" name="email" placeholder="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>    
         </div>
         <div>
             <label for="comments">
