--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
         <input type="text" name="email" placeholder="email" required>
     </div>
     <div>
-        <input type="password" name="password" placeholder="password" required>
+        <input type="password" name="password" placeholder="password" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
     </div>
     <p>
         <!--Form:submit button-->
