--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -18,7 +18,7 @@
         </span>
     </div>
     <div>
-        <input type="text" name="email" placeholder="email" required>    
+        <input type="text" name="email" placeholder="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>    
     </div>
     <div>
         <input type="password" name="password" placeholder="password" required>
