--- a/templates/base.html
+++ b/templates/base.html
@@ -47,25 +47,27 @@
             <li class="nav-item">
               <a class="nav-link" href="/about">About</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="/account">Account</a>
-            </li> -->
+           
             <!-- DropDown Navigation Bar Here -->
+            {% if logIn %}
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Account
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                {% if logIn %}
                 <a class="dropdown-item" href="/account">Profile</a>
                 <a class="dropdown-item" href="/logout">Log Out</a>
-                {% else %}
-                 <!-- TODO: separate login and sign-up page -->
-                <a class="dropdown-item" href="/login_page">Login</a>
-                <a class="dropdown-item" href="/sign_up">Sign Up</a>
-                {% endif %}
-              </div>
+               </div>
             </li>
+            {% else %}
+            <!-- separate login and sign-up page -->
+            <li class="nav-item">
+              <a class="nav-link" href="/login_page">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/sign_up">Sign Up</a>
+            </li>
+            {% endif %}
           </ul>
         </div>
       </nav>
