--- a/templates/login.html
+++ b/templates/login.html
@@ -11,10 +11,10 @@
   <form action="/login" method="POST">
     
     <div>
-        <input type="text" name="email" placeholder="email" required>
+        <input type="text" name="email" placeholder="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
     </div>
     <div>
-        <input type="password" name="password" placeholder="password" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+        <input type="password" name="password" placeholder="password" required>
     </div>
     <p>
         <!--Form:submit button-->
