created rating database for future review sections

--- a/templates/tour_details.html
+++ b/templates/tour_details.html
@@ -36,12 +36,12 @@
  </div>
 
     
-<!-- Additional Row for Descriptions -->
+<!-- Additional Row for Descriptions/Comments -->
 
   <div class="row">
-    <h2>Two always-equally wide columns</h2>
+    <h2>One always-equally wide columns</h2>
     <div class="col-12">
-      <div>Left</div>
+      <div>Comments/Ratings</div>
     </div>
 
 
