Tour Details included review must be logged in to book TODO make submission form for Reviews in profile ADD stars

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -3,11 +3,11 @@
 
 {% block body %}
 
-<h1 id="Account">Account</h1>
+<p id="title">Sign-Up to sail away with us</p>
 
 <!--Create New Account-->
 <fieldset>
-  <h2>Create a New Account</h2>
+  <h3 id="Account">Sign-Up</h3>
 
   <form action="/users" method="POST">
     
