Updated rating db Tours page  by date TODO submission form for reviews

--- a/templates/account.html
+++ b/templates/account.html
@@ -46,6 +46,7 @@
                             <th>Action</th>
                             <th>Status</th>
                             <th>Price</th>
+                            <th>Personal Review</th>
                           </tr>
                         
                           {% for trip in profile %}
