--- a/templates/review.html
+++ b/templates/review.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-<p id="title">Sign-Up to sail away with us</p>
+<p id="title">Please Tell Us About Your Experience</p>
 
 <!--Create New Account-->
 <fieldset>
