--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Account{% endblock %}
+{% block title %}Nautical Tours{% endblock %}
 
 {% block body %}
 <div class="container">
