--- a/templates/tour_details.html
+++ b/templates/tour_details.html
@@ -6,9 +6,9 @@
 <div class="container">
     <div class="page-header">
       <h1>{{ tour.tour_name }} Tour</h1>
-      <p id='{{ tour.tour_id}}'>{{ tour.details }}.</p>
+      <p id='{{ tour.tour_id }}'>{{ tour.details }}.</p>
     </div>
-    <h2>Start Date: {{ tour.date }}</h2>
+    <h2>Start Date: {{ tour.dates }}</h2>
     <input type="submit" value="Book Trip" class="btn btn-primary booked" id="booked">
     <input type="submit" value="Save Trip" class="btn btn-light saved" id="saved">
 
@@ -47,12 +47,13 @@
       <p> {{rating.review}}</p>
     </div>
     {% endfor %}
-      
     </div>
-
-
-
 </div>
 
+<!-- <script src="/static/scripts/index.js" default></script> -->
+<script src="/static/scripts/map.js"></script>
+<script async
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIU5CFOSTh6g_Mue4VOphmlQQ-fzlgOxs&callback=initMap">
+</script>
 
 {% endblock %}
