initial google places API TODO onclick buttons

--- a/templates/tour_details.html
+++ b/templates/tour_details.html
@@ -30,6 +30,12 @@
       <section class="map">
         <h5>{{tour.port_name}}</h5>
         <div id="map" class="{{tour.state_name}}"></div>
+        <span>
+        <h5>Explore</h5>
+        <button class="btn btn-success" id="museums">Museums</button>
+        <button class="btn btn-info" id="cafe">Cafe</button>
+        <button class="btn btn-danger" id="restaurants">Restaurants</button>
+      </span>
     </section>
     </div>
   </div>
@@ -53,7 +59,7 @@
 <!-- <script src="/static/scripts/index.js" default></script> -->
 <script src="/static/scripts/map.js"></script>
 <script async
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIU5CFOSTh6g_Mue4VOphmlQQ-fzlgOxs&callback=initMap">
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIU5CFOSTh6g_Mue4VOphmlQQ-fzlgOxs&libraries=places&callback=initMap">
 </script>
 
 {% endblock %}
