--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,7 @@
 <h1>About!</h1>
 
 <!-- Loop through ipsum and put a couple genetic photos in here.  -->
-<p>Link to ports and how they were discovered or other filler</p>
+<p>Link to ports and how they were discovered or other filler. All tours leave from San Francisco Harbor. </p>
 
 <!-- Comments Here -->
 <div class="container">
