--- a/templates/tours.html
+++ b/templates/tours.html
@@ -2,23 +2,50 @@
 {% block title %}Nautical Tours{% endblock %}
 
 {% block body %}
-
+<div class="container">
 <h1>Tour</h1>
-<p> Cards of various tours to switch through</p>
 
-<ul>
-  {% for tour in tours%}
-    <li>
-      <a href="/tours/{{ tour.tour_id }}">{{ tour.tour_name }}</a>
-      <p>Date: {{ tour.dates }}</p>
-      <p>Price: {{ tour.price }}</p>
-    </li>
-  {% endfor %}
-</ul>
+<!-- Cards of various tours to switch through -->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <!-- establishing the inner carousel -->
+    {% for tour in tours %}
+    {% if tours[0].tour_id == tour.tour_id %}
+    <div class="carousel-item active">
+      {% else %}
+      <div class="carousel-item">
+        {% endif %}
+      <img class="d-block w-100" src="/static/img/{{ tour.state_name }}.jpeg" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h3><a href="/tours/{{ tour.tour_id }}">{{ tour.tour_name }}</a></h3>
+        <p>{{ tour.details[:150] }}...</p>
+        <p>Price: {{ tour.price }}</p>
+      </div>
+    </div>
+    
+    {% endfor %}
+
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<!-- Cards of various tours to switch through -->
+</div>
 
  <!-- Images of Tour Package -->
  
-
+<div>
 <p> User Quotes</p>
 <p> Port Cities</p>
 <ul>
@@ -28,6 +55,6 @@
 </ul>
 
 <p>Enjoy the breeze until your next stop on land</p>
-
+</div>
 
 {% endblock %}
