--- a/templates/review.html
+++ b/templates/review.html
@@ -16,18 +16,20 @@
             <p id="{{ tour.dates }}">Dates: {{ tour.dates }}</p>
         </span>
     </div>
-    <div>
+    <div class="score">
         <p>Overall experience (scale of 1 through 5)</p>
-        <input type="radio" name="rating" value="1" id="one-rating">
-        <label for="one-rating">One</label>
-        <input type="radio" name="rating" value="2" id="two-rating">
-        <label for="two-rating">Two</label>
-        <input type="radio" name="rating" value="3" id="three-rating">
-        <label for="three-rating">Three</label>
-        <input type="radio" name="rating" value="4" id="four-rating">
-        <label for="four-rating">Four</label>
-        <input type="radio" name="rating" value="5" id="five-rating">
-        <label for="five-rating">Five</label>       
+        <div class="rating">
+        <input type="radio" name="star" value="1" id="one-star">
+        <label for="one-star"><span class="fa fa-star"></span></label>
+        <input type="radio" name="star" value="2" id="two-star">
+        <label for="two-star"><span class="fa fa-star"></span></label>
+        <input type="radio" name="star" value="3" id="three-star">
+        <label for="three-star"><span class="fa fa-star"></span></label>
+        <input type="radio" name="star" value="4" id="four-star">
+        <label for="four-star"><span class="fa fa-star"></span></label>
+        <input type="radio" name="star" value="5" id="five-star">
+        <label for="five-star"><span class="fa fa-star"></span></label>      
+        </div> 
     </div>
     <div>
         <div>
