updated account review TODO stars

--- a/templates/account.html
+++ b/templates/account.html
@@ -64,7 +64,7 @@
                               {% endif %}
                             {% else %}
                             <td>
-                            <button value="{{ trip.trip_id }}" id="unselect">Unselect Trip</button></td>
+                            <button value="{{ trip.trip_id }}" class="unselect">Unselect Trip</button></td>
                             {% endif %}
                           </tr>
                          {% endfor %}
