--- a/templates/review.html
+++ b/templates/review.html
@@ -20,15 +20,15 @@
         <p>Overall experience (scale of 1 through 5)</p>
         <div class="rating">
         <input type="radio" name="star" value="1" id="one-star">
-        <label for="one-star"><span class="fa fa-star"></span></label>
+        <label for="one-star">One<span class="fa fa-star"></span></label>
         <input type="radio" name="star" value="2" id="two-star">
-        <label for="two-star"><span class="fa fa-star"></span></label>
+        <label for="two-star">Two<span class="fa fa-star"></span></label>
         <input type="radio" name="star" value="3" id="three-star">
-        <label for="three-star"><span class="fa fa-star"></span></label>
+        <label for="three-star">Three<span class="fa fa-star"></span></label>
         <input type="radio" name="star" value="4" id="four-star">
-        <label for="four-star"><span class="fa fa-star"></span></label>
+        <label for="four-star">Four<span class="fa fa-star"></span></label>
         <input type="radio" name="star" value="5" id="five-star">
-        <label for="five-star"><span class="fa fa-star"></span></label>      
+        <label for="five-star">Five<span class="fa fa-star"></span></label>      
         </div> 
     </div>
     <div>
